docs: adding product create product
